# crewhub

./: .dockerignore  .env.example  .gitignore  BRAND.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.hf  LICENSE  README.md  ROADMAP.md  alembic.ini  auth.txt  compliance.txt  crewhub-explainer.pptx  deploy.sh  docker-compose.yml  enh.md  err.txt  gaps.md  hf.md  local_token.txt  logs.txt  package-lock.json  pyproject.toml  val.md
.github/workflows/: build-desktop.yml  ci.yml  deploy-agency-agents.yml  deploy-builder-proxy.yml  deploy-cf-gateway.yml  deploy-demo-agents.yml  deploy-gateway.yml  deploy-hf.yml  deploy-langflow-pool.yml  deploy-marketing-agents.yml  deploy-web.yml  monitor-spaces.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_is_admin_to_users.py  003_add_callback_url_to_tasks.py  004_add_mcp_url_to_agents.py  005_add_did_keys_to_agents.py  005_add_webhook_logs.py  006_add_api_key_revoked_at.py  007_add_agent_profile_fields.py  008_add_status_history_to_tasks.py  009_create_llm_calls_table.py  010_add_onboarding_fields_to_users.py  011_create_org_team_membership_tables.py  012_fix_boolean_server_defaults.py  013_add_account_tier_to_users.py  014_add_creator_user_id_to_tasks.py  015_add_webhook_logs.py  016_production_readiness_columns.py  017_add_eval_subscores.py  018_simplify_verification_tiers.py  (+19 more)
cloudflare/: api-proxy-production.js  api-proxy-staging.js  api-proxy.js  gateway-worker.js  wrangler-gateway.toml  wrangler-production.toml
demo_agents/: base.py  run_all.py
desktop/: .gitignore  build.sh  package-lock.json  package.json
docs/: ARCHITECTURE.md  CHANGELOG.md  HOW-TO.md  LIFECYCLE.md  TECHNICAL_REFERENCE.md
frontend/: .gitignore  TEST-CASES.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
gateway/: Dockerfile  README.md  billing.py  config.py  dedup.py  main.py  rate_limiter.py  requirements.txt
scripts/: demo.sh  deploy_agency_agents.py  deploy_demo_agents.py  deploy_gateway.py  deploy_langflow_pool.py  deploy_marketing_agents.py  download_agency_personalities.py  get_firebase_token.py  monitor_spaces.py  monitor_summary.py  register_agency_agents.py  reprice_agents.py  seed.py  update_agent_pricing.py
sdk/: pyproject.toml
sdk/src/a2a_marketplace/: __init__.py  client.py  models.py  streaming.py
sdk/src/crewhub/: __init__.py  client.py  models.py
src/: __init__.py  config.py  database.py  main.py
tests/: conftest.py  test_a2a_sse.py  test_account_tiers.py  test_activity_feed.py  test_agent_profile.py  test_agent_stats.py  test_anp.py  test_billing.py  test_channel_management.py  test_channels.py  test_credits.py  test_delegation.py  test_detect.py  test_discovery.py  test_discovery_degradation.py  test_e2e.py  test_e2e_flows.py  test_embeddings.py  test_gateway.py  test_hierarchical_e2e.py  test_hierarchical_execution.py  test_llm_calls.py  test_llm_keys_crud.py  test_llm_router.py  test_main.py  test_mcp.py  test_onboarding.py  test_openclaw_import.py  test_organizations.py  test_pattern_types.py  test_real_agents_e2e.py  test_register_agent_e2e.py  test_registry.py  test_staging_e2e.py  test_supervisor_e2e.py  test_supervisor_planner.py  test_supervisor_security.py  test_task_broker.py  test_task_timeline.py  test_x402.py
workers/: builder-proxy.js  wrangler-builder.toml
(+506 files in other folders)
