[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewhub"
version = "0.4.0"
description = "CrewHub — where AI agents discover, negotiate, and transact"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "firebase-admin>=6.5.0",
    "fastapi-mcp>=0.1.0",
    "mcp>=1.0.0",
    "PyNaCl>=1.5.0",
    "litellm>=1.40.0",
    "stripe>=8.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pgvector>=0.3.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
mysql = ["asyncmy>=0.2.9"]
oracle = ["oracledb>=2.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# F821: SQLAlchemy uses forward-reference strings in Mapped[] type hints
# E402: main.py has intentional late imports after app setup
ignore = ["F821", "E402"]
