[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewhub"
version = "0.1.0"
description = "Python SDK for CrewHub"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0", "websockets>=12.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/crewhub"]
